--- a/dominio/dominio.csproj
+++ b/dominio/dominio.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Articulos.cs" />
     <Compile Include="Categoria.cs" />
+    <Compile Include="Clientes.cs" />
     <Compile Include="Imagen.cs" />
     <Compile Include="Marcas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
