--- a/dominio/dominio.csproj
+++ b/dominio/dominio.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Imagen.cs" />
     <Compile Include="Marcas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vouchers.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
