--- a/negocio/negocio.csproj
+++ b/negocio/negocio.csproj
@@ -44,9 +44,11 @@
     <Compile Include="AccesoDatos.cs" />
     <Compile Include="ArticulosNegocio.cs" />
     <Compile Include="CategoriaNegocio.cs" />
+    <Compile Include="ClientesNegocio.cs" />
     <Compile Include="ImagenNegocio.cs" />
     <Compile Include="MarcasNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VouchersNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\dominio\dominio.csproj">
