--- a/Promo Web/Promo Web.csproj
+++ b/Promo Web/Promo Web.csproj
@@ -69,6 +69,8 @@
   <ItemGroup>
     <Content Include="FormularioClientes.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="SeleccionarPremio.aspx" />
+    <Content Include="Voucher.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -90,6 +92,20 @@
       <DependentUpon>MiMaster.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeleccionarPremio.aspx.cs">
+      <DependentUpon>SeleccionarPremio.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SeleccionarPremio.aspx.designer.cs">
+      <DependentUpon>SeleccionarPremio.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Voucher.aspx.cs">
+      <DependentUpon>Voucher.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Voucher.aspx.designer.cs">
+      <DependentUpon>Voucher.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="MiMaster.Master" />
