--- a/Promo Web/Web.config
+++ b/Promo Web/Web.config
@@ -4,10 +4,35 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+
+
+	<connectionStrings>
+		<add name="DefaultConnection"
+			 connectionString="Data Source= .\SQLEXPRESS;Initial Catalog=PROMOS_DB;integrated security=true"
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>
+
+
+	<appSettings>
+		<add key="cadenaConexion" value="server=.\SQLEXPRESS; database=PROMOS_DB; integrated security=true" />
+	</appSettings>
+	
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
   </system.web>
+
+
+	<system.webServer>
+		<defaultDocument>
+			<files>
+				<add value="Voucher.aspx" />
+			</files>
+		</defaultDocument>
+	</system.webServer>
+	
+	
+	
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
