Commit: Default.aspx y Default.aspx.cs

--- a/Promo Web/Promo Web.csproj
+++ b/Promo Web/Promo Web.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Default.aspx" />
     <Content Include="FormularioClientes.aspx" />
     <Content Include="Global.asax" />
     <Content Include="SeleccionarPremio.aspx" />
@@ -74,6 +75,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="FormularioClientes.aspx.cs">
       <DependentUpon>FormularioClientes.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
